--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,259 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;400;500;700&display=swap');  
+
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+
+body{
+    font-family: 'Roboto', sans-serif;
+    font-size: 14px;
+    background: #f5f5f5;
+}
+
+
+li{
+    list-style: none;
+}
+
+a{
+    text-decoration: none;
+    color: inherit;
+    transition: all 0.5s ease-in-out;
+
+    &:hover{
+        border-bottom: 1px solid blue;
+        color: inherit;
+    }
+}
+
+.active{
+    color: blue;
+    transition: color 0.5s ease;
+}
+
+span{
+    padding: 0 30px;
+}
+
+button{
+    background-color: red;
+    color: white;
+    font-weight: 500px;
+    height: 25px;
+    width: 100px;
+    outline: none;
+    border: none;
+    cursor: pointer;
+    transition: opacity 0.5s ease;
+
+    &:hover{
+        opacity: .7;
+    }
+}
+
+header{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    height: 80px;
+    border-bottom: 1px solid gray;
+    padding: 0 20px;
+    align-items: center;
+    font-weight: bold;
+    position: sticky;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    background-color: white;
+
+
+    ul{
+        display: flex;
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        align-items: center;
+        li{
+            margin-left: 30px;
+           
+        }
+    }
+}
+
+
+
+.category, .books{
+    padding: 30px 20px;
+    max-width: 800px;
+    
+form{
+    position: sticky;
+    top: 80px;
+    background-color: white;
+    padding-top: 20px;
+    margin-bottom: 20px;
+    z-index: 80;
+    padding:20px;
+}
+
+    input{
+        width: 200px;
+        height: 30px;
+        border: 1px solid gray;
+        border-radius: 5px;
+        padding: 0 10px;
+        margin-bottom: 30px;
+        margin-top: 10px;
+    }
+
+   .add button{
+        margin: 10px 0px;
+        transition: opacity 0.5s ease;
+        height: 35px;
+        width: 100px;
+        font-weight: bold;
+        border-radius: 10px;
+        background-color: blue;
+        
+        &:hover{
+            opacity: .7;
+        }
+    }
+
+   .transparent{
+        background-color: transparent !important;
+        border: 2px solid blue;
+        color: blue;
+      
+        outline: none;
+        cursor: pointer;
+
+       
+   }
+
+   .list{
+       padding: 20px;
+       h4{
+           font-size:14px ;
+           font-weight: bold;
+           display: flex;
+           justify-content: space-between;
+           align-items: center;
+       }
+
+      
+
+       li{
+              display: flex;
+              justify-content: space-between;
+              align-items: center;
+              margin: 20px 0;
+              padding: 0 20px;
+              border-bottom: 1px solid gray;
+              font-weight: bold;
+              cursor: pointer;
+              height: 80px;
+              position: relative;
+    
+              &:hover{
+                background-color:gray
+              }
+
+              h4{
+                font-family: 'Poppins', sans-serif;
+                font-size: 1.1rem;
+              }
+
+              
+       }
+        button:nth-child(3){
+                  background-color: blue ;
+              }
+       .bxs-like{
+           color: white;
+           font-size: 20px;
+           padding: 5px;
+           background-color: blue;
+           border-radius: 50%;
+           margin-left: 20px;
+
+       }
+   }
+
+   .even{
+         background-color: #c7c5c5;
+   }
+
+   .blue{
+       box-shadow: 0px 0px 5px blue;
+   }
+
+}
+
+@media screen and (max-width: 800px){
+
+    header{
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-evenly;
+        font-size: 11px;
+
+        li{
+            margin-right: 0;
+        }
+        
+    }
+    .category, .books{
+        max-width: 100%;
+        font-size: 12px;
+
+        form{
+            padding: 10px;
+
+            h4{
+                padding: 10px 0;
+            }
+
+            input{
+                display: block;
+                width: 100%;
+            }
+
+            button{
+                margin: 10px 0 !important;
+                margin-right: 20px !important;
+            }
+        }
+
+        .list{
+            li{
+                display: flex;
+                flex-direction: column;
+                height: 130px;
+                justify-content: center;
+                align-items: center;
+
+                h4{
+                    margin: 0;
+
+                    span{
+                        padding: 0;
+                        padding-right: 10px;
+                        margin: 10px 0;
+                    }
+
+                   
+                }
+
+                button{
+                    margin-top: 10px !important;
+                }
+            }
+        }
+    }
+}
+    
